<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="20dp">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/layout_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/ingredient_name"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edit_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textCapWords" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/layout_unit_cost"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:hint="@string/unit_cost"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edit_unit_cost"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/layout_base_unit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:hint="@string/base_unit"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edit_base_unit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/layout_category"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:hint="@string/category"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edit_category"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textCapWords" />

	</com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
