<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/coordinator_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/surface">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="@color/bar_color"
			app:title="@string/master_cost_list"
			app:titleTextColor="@color/normal_text_color"
			app:navigationIcon="@drawable/ic_arrow" />

	</com.google.android.material.appbar.AppBarLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recycler_master_costs"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clipToPadding="false"
			android:paddingTop="8dp"
			android:paddingBottom="88dp"
			tools:listitem="@layout/item_master_ingredient" />

		<TextView
			android:id="@+id/empty_state_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="32dp"
			android:gravity="center"
			android:text="@string/no_master_ingredients"
			style="@style/TextAppearance.AppCompat.Medium"
			android:textColor="@color/subtitle_color"
			android:visibility="gone"
			tools:visibility="visible" />

	</FrameLayout>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/fab_add_master_ingredient"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="24dp"
		android:contentDescription="@string/add_ingredient_cost"
		android:src="@drawable/ic_plus"
		app:tint="@color/white"
		app:backgroundTint="@color/blue" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
